fixed delete button for tasks: wrong position, position of containing element has to be absolute, fixed or relative to use position: absolute in child element correctly (added position:relative to .panel in forms.css)

--- a/web/css/forms.css
+++ b/web/css/forms.css
@@ -20,6 +20,7 @@ textarea{
 
 .panel{
     margin-bottom: 0px;
+    position:relative;
     background-color: #ffffff;
     border: 1px solid transparent;
     border-radius: 4px;
